[gd_scene load_steps=11 format=2]

[ext_resource path="res://Script/StageSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Select.png" type="Texture" id=2]
[ext_resource path="res://Assets/Stages/Stage 1-2 unlocked.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/BG Select Stage.png" type="Texture" id=4]
[ext_resource path="res://Assets/Stages/Stage 3-5 unlocked.png" type="Texture" id=5]
[ext_resource path="res://Assets/Stages/Stage 3-5 locked.png" type="Texture" id=6]
[ext_resource path="res://Assets/Stages/Stage 1-2 locked.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/backbutton.png" type="Texture" id=8]
[ext_resource path="res://Assets/SFX/ClickButton.mp3" type="AudioStream" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.729412 )
corner_detail = 1

[node name="StageSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="DarkOverlay" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_top = 49.0
margin_right = 505.0
margin_bottom = 303.0
texture = ExtResource( 2 )
expand = true

[node name="Back" type="Button" parent="."]
margin_left = 27.0
margin_top = 29.0
margin_right = 297.0
margin_bottom = 141.0
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="Back"]
margin_right = 262.0
margin_bottom = 112.0
texture = ExtResource( 8 )
expand = true

[node name="Stage1" type="Button" parent="."]
margin_left = 65.0
margin_top = 414.0
margin_right = 665.0
margin_bottom = 914.0
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="Stage2" type="Button" parent="."]
margin_left = 379.0
margin_top = 718.0
margin_right = 979.0
margin_bottom = 1218.0
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="Stage3" type="Button" parent="."]
margin_left = 736.0
margin_top = 418.0
margin_right = 1336.0
margin_bottom = 918.0
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 5 )
flat = true
icon_align = 1
expand_icon = true

[node name="Stage4" type="Button" parent="."]
margin_left = 1108.0
margin_top = 719.0
margin_right = 1708.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Stage5" type="Button" parent="."]
margin_left = 1464.0
margin_top = 418.0
margin_right = 2064.0
margin_bottom = 918.0
rect_scale = Vector2( 0.65, 0.65 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="Stage2 Locked" type="TextureRect" parent="."]
margin_left = 379.0
margin_top = 719.0
margin_right = 979.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 7 )
expand = true

[node name="Stage3 Locked" type="TextureRect" parent="."]
margin_left = 734.0
margin_top = 418.0
margin_right = 1334.0
margin_bottom = 918.0
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 6 )
expand = true

[node name="Stage4 Locked" type="TextureRect" parent="."]
margin_left = 1107.0
margin_top = 719.0
margin_right = 1707.0
margin_bottom = 1219.0
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 6 )
expand = true

[node name="Stage5 Locked" type="TextureRect" parent="."]
margin_left = 1463.0
margin_top = 418.0
margin_right = 2063.0
margin_bottom = 918.0
rect_scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 6 )
expand = true

[node name="SFXClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"
